--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: #13243E;
+    background-color: rgb(2, 39, 2);
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -24,7 +24,7 @@ main {
 }
 
 section {
-    border: 1px solid green;
+    border: 2px solid white;
 }
 
 #bio {
@@ -50,11 +50,11 @@ section {
 
 .blueTextFormat {
     font-size: 1.3rem;
-    color: #86c0e9;
+    color: white;
 }
 
 .grayBox {
-    background-color: gray;
+    background-color: rgb(19, 19, 19);
     padding: .5rem;
 }
 
@@ -83,7 +83,6 @@ figure > img {
 
 figcaption {
     text-align: center;
-    background-color: rgba(0,0,0,0.5);
     max-width: 150px;
     position: relative;
     top: -20px;
@@ -96,3 +95,4 @@ figcaption {
 footer {
     text-align: center;
 }
+
